Fix splash logo alignment

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -754,6 +754,9 @@ div#categoriestwo {
 		margin: 10px;
 		float: right;
 	}
+	.splash #logo {
+		right: auto;
+	}
 
 	nav a img#resize {
 		width: 160px;
